Alterações na agenda
Algumas alterações e adições foram feitas, porém anda está funcional, próximos commits serão responsáveis em reformular agenda completamente e torna-la funcional

--- a/bin/gui/view/ViewAtualizaAgenda.fxml
+++ b/bin/gui/view/ViewAtualizaAgenda.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -10,25 +11,11 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="325.0" prefWidth="709.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.ViewAtualizaAgendaController">
+<AnchorPane prefHeight="325.0" prefWidth="709.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="gui.controller.ViewAtualizaAgendaController">
    <children>
-      <Line endX="-105.0" endY="245.0" layoutX="479.0" layoutY="85.0" startX="-105.0" startY="-85.0" stroke="#827f7f" />
-      <TextField layoutX="478.0" layoutY="98.0" promptText="CPF do cliente" />
-      <Label layoutX="446.0" layoutY="102.0" text="CPF:" />
-      <TextField layoutX="478.0" layoutY="134.0" promptText="Nome do cliente" />
-      <Label layoutX="432.0" layoutY="138.0" text="Nome:" />
-      <TextField layoutX="479.0" layoutY="168.0" promptText="Email do cliente" />
-      <Label layoutX="434.0" layoutY="172.0" prefHeight="17.0" prefWidth="36.0" text="Email:" />
-      <Label layoutX="419.0" layoutY="206.0" prefHeight="17.0" prefWidth="50.0" text="Telefone:" />
-      <TextField layoutX="478.0" layoutY="202.0" promptText="Telefone do cliente" />
-      <Label layoutX="408.0" layoutY="33.0" text="Digite os novos dados:">
-         <font>
-            <Font name="System Bold" size="21.0" />
-         </font>
-      </Label>
-      <TableView fx:id="tvAgendamento" layoutX="-1.0" layoutY="32.0" prefHeight="299.0" prefWidth="375.0">
+      <Line endX="-105.0" endY="245.0" layoutX="479.0" layoutY="85.0" startX="-105.0" startY="-53.0" stroke="#827f7f" />
+      <TableView fx:id="tvAgendamento" layoutX="-1.0" layoutY="32.0" onMouseClicked="#selecionaHorario" prefHeight="299.0" prefWidth="375.0">
          <columns>
             <TableColumn fx:id="colunaNome" minWidth="0.0" prefWidth="100.0" text="Cliente" />
             <TableColumn fx:id="colunaFuncionario" prefWidth="122.0" text="Funcionário" />
@@ -38,8 +25,8 @@
       </TableView>
       <Button fx:id="btVoltar" layoutX="-1.0" layoutY="-1.0" mnemonicParsing="false" onAction="#voltaScene" prefHeight="31.0" prefWidth="62.0" text="Voltar" />
       <Line endX="-199.0" endY="145.2928924560547" layoutX="192.0" layoutY="-114.0" startX="517.0000610351562" startY="145.29290771484375" stroke="#827f7f" />
-      <DatePicker fx:id="dpData" layoutX="191.0" layoutY="2.0" onAction="#carregaAgendamento" />
-      <TextField fx:id="txtCliente" layoutX="404.0" layoutY="2.0">
+      <DatePicker fx:id="dpData" layoutX="211.0" layoutY="3.0" />
+      <TextField fx:id="txtCliente" layoutX="471.0" layoutY="3.0">
          <contextMenu>
             <ContextMenu fx:id="cmCliente">
               <items>
@@ -48,5 +35,21 @@
             </ContextMenu>
          </contextMenu>
       </TextField>
+      <Label layoutX="423.0" layoutY="8.0" text="Cliente:" />
+      <Label layoutX="174.0" layoutY="8.0" text="Data:" />
+      <Button fx:id="btBuscar" layoutX="646.0" layoutY="3.0" mnemonicParsing="false" onAction="#carregaAgendamento" text="Buscar" />
+      <CheckBox fx:id="cb12" layoutX="440.0" layoutY="82.0" mnemonicParsing="false" text="12:00" />
+      <CheckBox fx:id="cb12_3" layoutX="440.0" layoutY="107.0" mnemonicParsing="false" text="12:30" />
+      <CheckBox fx:id="cb13" layoutX="440.0" layoutY="132.0" mnemonicParsing="false" text="13:00" />
+      <CheckBox fx:id="cb13_3" layoutX="440.0" layoutY="156.0" mnemonicParsing="false" text="13:30" />
+      <CheckBox fx:id="cb14" layoutX="440.0" layoutY="181.0" mnemonicParsing="false" text="14:00" />
+      <CheckBox fx:id="cb15" layoutX="531.0" layoutY="82.0" mnemonicParsing="false" text="15:00" />
+      <CheckBox fx:id="cb18" layoutX="616.0" layoutY="82.0" mnemonicParsing="false" text="18:00" />
+      <CheckBox fx:id="cb17_3" layoutX="531.0" layoutY="206.0" mnemonicParsing="false" text="17:30" />
+      <CheckBox fx:id="cb14_3" layoutX="439.0" layoutY="206.0" mnemonicParsing="false" text="14:30" />
+      <CheckBox fx:id="cb17" layoutX="531.0" layoutY="181.0" mnemonicParsing="false" text="17:00" />
+      <CheckBox fx:id="cb16_3" layoutX="531.0" layoutY="156.0" mnemonicParsing="false" text="16:30" />
+      <CheckBox fx:id="cb16" layoutX="531.0" layoutY="132.0" mnemonicParsing="false" text="16:00" />
+      <CheckBox fx:id="cb15_3" layoutX="531.0" layoutY="107.0" mnemonicParsing="false" text="15:30" />
    </children>
 </AnchorPane>
