--- a/src/gui/view/ViewCliente.fxml
+++ b/src/gui/view/ViewCliente.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="50000.0" maxWidth="50000.0" minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="776.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.ViewClienteController">
+<AnchorPane maxHeight="50000.0" maxWidth="50000.0" minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="776.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewClienteController">
    <children>
       <TextField fx:id="txtCpfCliente" layoutX="305.0" layoutY="87.0" promptText="CPF do cliente" />
       <Label layoutX="267.0" layoutY="92.0" text="CPF:" />
