--- a/src/gui/view/View.fxml
+++ b/src/gui/view/View.fxml
@@ -53,7 +53,7 @@
          <children>
             <ScrollPane layoutX="-18.0" layoutY="-11.0" prefHeight="403.0" prefWidth="751.0" style="-fx-border-color: #827f7f;">
                <content>
-                  <TableView fx:id="tvAgenda" prefHeight="383.0" prefWidth="1464.0" style="-fx-alignment: CENTER;">
+                  <TableView fx:id="tvAgenda" onMouseClicked="#carregaAgendamento" prefHeight="383.0" prefWidth="1464.0" style="-fx-alignment: CENTER;">
                     <columns>
                         <TableColumn minWidth="0.0" prefWidth="110.0" resizable="false" sortable="false" style="-fx-alignment: CENTER;" text="1 horário">
                            <columns>
