--- a/bin/gui/view/ViewAtualizaAgenda.fxml
+++ b/bin/gui/view/ViewAtualizaAgenda.fxml
@@ -1,55 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Line?>
 
-<AnchorPane prefHeight="325.0" prefWidth="709.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="gui.controllers.ViewAtualizaAgendaController">
+<AnchorPane prefHeight="198.0" prefWidth="656.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewAtualizaAgendaController">
    <children>
-      <Line endX="-105.0" endY="245.0" layoutX="479.0" layoutY="85.0" startX="-105.0" startY="-53.0" stroke="#827f7f" />
-      <TableView fx:id="tvAgendamento" layoutX="-1.0" layoutY="32.0" onMouseClicked="#selecionaHorario" prefHeight="299.0" prefWidth="375.0">
-         <columns>
-            <TableColumn fx:id="colunaNome" minWidth="0.0" prefWidth="100.0" text="Cliente" />
-            <TableColumn fx:id="colunaFuncionario" prefWidth="122.0" text="Funcionário" />
-            <TableColumn fx:id="colunaData" prefWidth="83.00001525878906" text="Data" />
-            <TableColumn fx:id="colunaHorario" prefWidth="70.0" text="Horário" />
-         </columns>
-      </TableView>
-      <Button fx:id="btVoltar" layoutX="-1.0" layoutY="-1.0" mnemonicParsing="false" onAction="#voltaScene" prefHeight="31.0" prefWidth="62.0" text="Voltar" />
-      <Line endX="-199.0" endY="145.2928924560547" layoutX="192.0" layoutY="-114.0" startX="517.0000610351562" startY="145.29290771484375" stroke="#827f7f" />
-      <DatePicker fx:id="dpData" layoutX="211.0" layoutY="3.0" />
-      <TextField fx:id="txtCliente" layoutX="471.0" layoutY="3.0">
-         <contextMenu>
-            <ContextMenu fx:id="cmCliente">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Unspecified Action" />
-              </items>
-            </ContextMenu>
-         </contextMenu>
-      </TextField>
-      <Label layoutX="423.0" layoutY="8.0" text="Cliente:" />
-      <Label layoutX="174.0" layoutY="8.0" text="Data:" />
-      <Button fx:id="btBuscar" layoutX="646.0" layoutY="3.0" mnemonicParsing="false" onAction="#carregaAgendamento" text="Buscar" />
-      <CheckBox fx:id="cb12" layoutX="440.0" layoutY="82.0" mnemonicParsing="false" text="12:00" />
-      <CheckBox fx:id="cb12_3" layoutX="440.0" layoutY="107.0" mnemonicParsing="false" text="12:30" />
-      <CheckBox fx:id="cb13" layoutX="440.0" layoutY="132.0" mnemonicParsing="false" text="13:00" />
-      <CheckBox fx:id="cb13_3" layoutX="440.0" layoutY="156.0" mnemonicParsing="false" text="13:30" />
-      <CheckBox fx:id="cb14" layoutX="440.0" layoutY="181.0" mnemonicParsing="false" text="14:00" />
-      <CheckBox fx:id="cb15" layoutX="531.0" layoutY="82.0" mnemonicParsing="false" text="15:00" />
-      <CheckBox fx:id="cb18" layoutX="616.0" layoutY="82.0" mnemonicParsing="false" text="18:00" />
-      <CheckBox fx:id="cb17_3" layoutX="531.0" layoutY="206.0" mnemonicParsing="false" text="17:30" />
-      <CheckBox fx:id="cb14_3" layoutX="439.0" layoutY="206.0" mnemonicParsing="false" text="14:30" />
-      <CheckBox fx:id="cb17" layoutX="531.0" layoutY="181.0" mnemonicParsing="false" text="17:00" />
-      <CheckBox fx:id="cb16_3" layoutX="531.0" layoutY="156.0" mnemonicParsing="false" text="16:30" />
-      <CheckBox fx:id="cb16" layoutX="531.0" layoutY="132.0" mnemonicParsing="false" text="16:00" />
-      <CheckBox fx:id="cb15_3" layoutX="531.0" layoutY="107.0" mnemonicParsing="false" text="15:30" />
+      <TabPane prefHeight="198.0" prefWidth="660.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="Atualização">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+          </Tab>
+          <Tab text="Exclusão">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="169.0" prefWidth="649.0">
+                     <children>
+                        <TextField fx:id="tfFuncionario" layoutX="90.0" layoutY="15.0" />
+                        <TextField fx:id="tfCliente" layoutX="90.0" layoutY="50.0" />
+                        <Label layoutX="14.0" layoutY="19.0" text="Funcionário:" />
+                        <Label layoutX="40.0" layoutY="54.0" text="Cliente:" />
+                        <DatePicker fx:id="dpData" layoutX="89.0" layoutY="85.0" prefHeight="25.0" prefWidth="150.0" />
+                        <Label layoutX="51.0" layoutY="89.0" text="Data:" />
+                        <Button fx:id="btPesquisar" layoutX="172.0" layoutY="132.0" mnemonicParsing="false" onAction="#pesquisaAgendamento" text="Pesquisar" />
+                        <TableView fx:id="tvAgendamento" layoutX="288.0" layoutY="12.0" prefHeight="147.0" prefWidth="227.0">
+                          <columns>
+                            <TableColumn fx:id="colunaCliente" prefWidth="75.0" text="Cliente" />
+                            <TableColumn fx:id="clunaHorario" prefWidth="75.0" text="Horário" />
+                              <TableColumn fx:id="colunaExcluir" prefWidth="75.0" text="Excluir?" />
+                          </columns>
+                        </TableView>
+                        <Button fx:id="btExcluir" layoutX="526.0" layoutY="132.0" mnemonicParsing="false" text="Excluir selecionados" />
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
    </children>
 </AnchorPane>
